chore: export db entity schema
